Starts with css

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Site title</title>
+		<title>Piotr Rzonsowski</title>
 		<meta name="description" content="Description" />
 
 		<!-- Title -->
@@ -24,7 +24,7 @@
 		<main>
 			<section class="hero">
 				<img
-					src="http://rzonsol.pl/obrazy/ja.jpg"
+					src="../assets/img/9127775537.jpg"
 					alt="Picture with me on the rock in the stream."
 					class="hero__img"
 				/>
