Add style for hero section

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -29,8 +29,8 @@
 					class="hero__img"
 				/>
 				<h1 class="hero__title">
-					Hey there! My name is Piotr and I'm Backend developer with some
-					Frontend knowledge and runner.
+					Hey there!🖐 My name is Piotr and I'm Backend developer with some
+					Frontend knowledge and runner.🏃‍♂️
 				</h1>
 				<p class="hero__info">
 					You might be interested in checking the list of
@@ -40,7 +40,7 @@
 					looking for a new challenges so if you have one -
 					<a href="#" class="hero__info__link">contact me</a> 😊
 				</p>
-				<a href="#" class="hero__link_mail">piotr.rzonsowski@rzonsol.pl</a>
+				<a href="#" class="hero__link__mail">piotr.rzonsowski@rzonsol.pl</a>
 			</section>
 			<section class="skills">
 				<h2 class="skills__title">My skills</h2>
@@ -183,7 +183,7 @@
 					/>
 					<img
 						src="../assets/img/Instagram_Icon.svg"
-						alt="Icon of Instagrame"
+						alt="Icon of Instagram"
 						class="main__footer__social__icon"
 					/>
 				</section>
