Style gitgub section

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -51,11 +51,13 @@
 						<h4 class="skills__stack__title">Backend</h4>
 						<ul class="skills__list">
 							<li class="skills__item">Java 8/11</li>
-							<li class="skills__item">Spring</li>
 							<li class="skills__item">JPA / Hibernate</li>
+							<li class="skills__item">jUnit</li>
+							<li class="skills__item">Spring</li>
+
 							<li class="skills__item">Maven</li>
 							<li class="skills__item">Oracle DB</li>
-							<li class="skills__item">jUnit</li>
+
 							<li class="skills__item">TDD</li>
 							<li class="skills__item">REST</li>
 							<li class="skills__item">SQL</li>
@@ -86,26 +88,27 @@
 					<section class="skills__know__backend">
 						<h4 class="skills__stack__title">Backend</h4>
 						<ul class="skills__list">
-							<li class="skills__item">Gradle</li>
 							<li class="skills__item">Docker</li>
-							<li class="skills__item">SOAP</li>
+							<li class="skills__item">Gradle</li>
+							<li class="skills__item">Multithreading</li>
 							<li class="skills__item">NoSQL</li>
 							<li class="skills__item">Selenium</li>
+							<li class="skills__item">SOAP</li>
 							<li class="skills__item">Spring Cloud</li>
 							<li class="skills__item">Spring flux</li>
-							<li class="skills__item">Multithreading</li>
 						</ul>
 					</section>
 					<section class="skills__know__frontend">
 						<h4 class="skills__stack__title">Frontend</h4>
 						<ul class="skills__list">
+							<li class="skills__item">Angular</li>
+							<li class="skills__item">Bootstrap</li>
+							<li class="skills__item">CSS animations</li>
 							<li class="skills__item">
 								JavaScript ES6+ features
 							</li>
-							<li class="skills__item">CSS animations</li>
 							<li class="skills__item">NPM Scripts</li>
 							<li class="skills__item">Typescript</li>
-							<li class="skills__item">Bootstrap</li>
 						</ul>
 					</section>
 				</section>
@@ -134,37 +137,56 @@
 				</section>
 			</section>
 			<section class="projects">
-				<h2 class="projects__title" id="projects__title">Recent projects</h2>
-				<p class="projects__info">
-					I started my frontend developer path in 2017. I'm backend developer
-					with same knowledge in Machine Leaning and frontend at home 🧐. Here’s
-					the list of the things which I'm currently developing on github.
-				</p>
-				<section class="cards">
-					<section class="cards__item">
-						<img src="../assets/img/github_Icon.svg" alt="Icons of GitHub" />
-						<h4 class="cards__title">Project name</h4>
-						<p class="cards__description">Project description.</p>
-						<footer class="cards__footer">
-							<a class="cards__footer__a" href="#"
-								><img
-									class="cards__footer__image"
-									src="../assets/img/demo_icon.svg"
-									alt="image of pc monitor."
+				<div class="projects__container">
+					<h2 class="projects__title" id="projects__title">Recent projects</h2>
+					<p class="projects__info">
+						I started my developer path in 2017, on full time. I'm backend
+						developer with same knowledge in Machine Leaning and frontend 🧐.
+						Here’s the list of the things which I'm currently developing on
+						github, after work 😎.
+					</p>
+					<section class="cards">
+						<section class="cards__item">
+							<div class="cards__item__container">
+								<img
+									src="../assets/img/github_Icon.svg"
+									alt="Icons of GitHub"
 								/>
-								Demo
-							</a>
-							<a href="#" class="cards__footer__a"
-								><img
-									class="cards__footer__image"
-									src="../assets/img/Code_Icon.svg"
-									alt="image of console."
+								<h4 class="cards__item__title">Project name</h4>
+								<p class="cards__item__description">Project description.</p>
+							</div>
+							<footer class="cards__item__footer">
+								<a class="cards__item__footer__a" href="#">
+									Demo
+								</a>
+								<a
+									href="#"
+									class="cards__item__footer__a cards__item__footer__a__code"
+								>
+									GitHub
+								</a>
+							</footer>
+						</section>
+						<section class="cards__item">
+							<div class="cards__item__container">
+								<img
+									src="../assets/img/github_Icon.svg"
+									alt="Icons of GitHub"
 								/>
-								GitHub
-							</a>
-						</footer>
+								<h4 class="cards__item__title">Project name</h4>
+								<p class="cards__item__description">Project description.</p>
+							</div>
+							<footer class="cards__item__footer">
+								<a
+									href="#"
+									class="cards__item__footer__a cards__item__footer__a__code"
+								>
+									GitHub
+								</a>
+							</footer>
+						</section>
 					</section>
-				</section>
+				</div>
 			</section>
 			<footer class="main__footer">
 				<h3 class="main__footer__title" id="main__footer__title">Contact me</h3>
