Add style for contact

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -189,30 +189,37 @@
 				</div>
 			</section>
 			<footer class="main__footer">
-				<h3 class="main__footer__title" id="main__footer__title">Contact me</h3>
-				<p class="main__footer__info">
-					I’m open for new opportunities. If you have one for me we should talk!
-				</p>
-				<section class="main__footer__social">
-					<img
-						src="../assets/img/FB_Icon.svg"
-						alt="Icon of Facebook"
-						class="main__footer__social__icon"
-					/>
-					<img
-						src="../assets/img/Github_Icon_footer.svg"
-						alt="Icon of GitHub"
-						class="main__footer__social__icon"
-					/>
-					<img
-						src="../assets/img/Instagram_Icon.svg"
-						alt="Icon of Instagram"
-						class="main__footer__social__icon"
-					/>
-				</section>
-				<a class="main__footer__mail" href="mailto:rzonsol@gmail.com"
-					>rzonsol@gmail.com</a
-				>
+				<div class="main__footer__container">
+					<h3 class="main__footer__title" id="main__footer__title">
+						Contact me
+					</h3>
+					<p class="main__footer__info">
+						I’m open for new opportunities. If you have one for me we should
+						talk!
+					</p>
+					<section class="main__footer__social">
+						<img
+							src="../assets/img/FB_Icon.svg"
+							alt="Icon of Facebook"
+							class="main__footer__social__icon"
+						/>
+						<img
+							src="../assets/img/Github_Icon_footer.svg"
+							alt="Icon of GitHub"
+							class="main__footer__social__icon"
+						/>
+						<img
+							src="../assets/img/Instagram_Icon.svg"
+							alt="Icon of Instagram"
+							class="main__footer__social__icon"
+						/>
+					</section>
+					<a
+						class="main__footer__mail"
+						href="mailto:piotr.rzonsowski@rzonsol.pl"
+						>piotr.rzonsowski@rzonsol.pl</a
+					>
+				</div>
 			</footer>
 		</main>
 		<script src="js/main.js"></script>
