Add links to socials

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -198,21 +198,26 @@
 						talk!
 					</p>
 					<section class="main__footer__social">
-						<img
-							src="../assets/img/FB_Icon.svg"
-							alt="Icon of Facebook"
-							class="main__footer__social__icon"
-						/>
+						<a href="https://www.facebook.com/piotr.rzonsowski" target="blank">
+							<img
+								src="../assets/img/FB_Icon.svg"
+								alt="Icon of Facebook"
+								class="main__footer__social__icon"
+							/>
+						</a>
+						<a href="https://github.com/rzonsol" target="blank">
 						<img
 							src="../assets/img/Github_Icon_footer.svg"
 							alt="Icon of GitHub"
 							class="main__footer__social__icon"
 						/>
+						<a href="https://www.instagram.com/piotrrzonsowski/" target="blank">
 						<img
 							src="../assets/img/Instagram_Icon.svg"
 							alt="Icon of Instagram"
 							class="main__footer__social__icon"
 						/>
+						</a>
 					</section>
 					<a
 						class="main__footer__mail"
