--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!-- OPTIONAL description. 2-4 sentences. -->
 		<meta property="og:description" content="" />
 		<!-- full url with http(s) ie. # -->
-		<meta property="og:url" content="" />
+		<meta property="og:url" content="https://rzonsol.github.io/" />
 		<!-- full url to the image with http(s) ie. #png. Facebook suggests at least 1200 x 630. -->
 		<meta property="og:image" content="#" />
 
@@ -53,11 +53,9 @@
 							<li class="skills__item">Java 8/11</li>
 							<li class="skills__item">JPA / Hibernate</li>
 							<li class="skills__item">jUnit</li>
-							<li class="skills__item">Spring</li>
-
+							<li class="skills__item">Spring / Spring Boot</li>
 							<li class="skills__item">Maven</li>
 							<li class="skills__item">Oracle DB</li>
-
 							<li class="skills__item">TDD</li>
 							<li class="skills__item">REST</li>
 							<li class="skills__item">SQL</li>
