--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Description" />
 
 		<!-- Title -->
-		<meta property="og:title" content="" />
+		<meta property="og:title" content="Piotr Rzonsowski" />
 		<!-- OPTIONAL description. 2-4 sentences. -->
 		<meta property="og:description" content="" />
 		<!-- full url with http(s) ie. # -->
