--- a/index.html
+++ b/index.html
@@ -143,46 +143,8 @@
 						Here’s the list of the things which I'm currently developing on
 						github, after work 😎.
 					</p>
-					<section class="cards">
-						<section class="cards__item">
-							<div class="cards__item__container">
-								<img
-									src="../assets/img/github_Icon.svg"
-									alt="Icons of GitHub"
-								/>
-								<h4 class="cards__item__title">Project name</h4>
-								<p class="cards__item__description">Project description.</p>
-							</div>
-							<footer class="cards__item__footer">
-								<a class="cards__item__footer__a" href="#">
-									Demo
-								</a>
-								<a
-									href="#"
-									class="cards__item__footer__a cards__item__footer__a__code"
-								>
-									GitHub
-								</a>
-							</footer>
-						</section>
-						<section class="cards__item">
-							<div class="cards__item__container">
-								<img
-									src="../assets/img/github_Icon.svg"
-									alt="Icons of GitHub"
-								/>
-								<h4 class="cards__item__title">Project name</h4>
-								<p class="cards__item__description">Project description.</p>
-							</div>
-							<footer class="cards__item__footer">
-								<a
-									href="#"
-									class="cards__item__footer__a cards__item__footer__a__code"
-								>
-									GitHub
-								</a>
-							</footer>
-						</section>
+					<section class="cards cards-js">
+						
 					</section>
 				</div>
 			</section>
