--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- Title -->
 		<meta property="og:title" content="Piotr Rzonsowski" />
 		<!-- OPTIONAL description. 2-4 sentences. -->
-		<meta property="og:description" content="" />
+		<meta property="og:description" content="My developer portfolio" />
 		<!-- full url with http(s) ie. # -->
 		<meta property="og:url" content="https://rzonsol.github.io/" />
 		<!-- full url to the image with http(s) ie. #png. Facebook suggests at least 1200 x 630. -->
