--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
 						Here’s the list of the things which I'm currently developing on
 						github, after work 😎.
 					</p>
-					<section class="cards cards-js">
-						
-					</section>
+					<section class="cards cards-js"></section>
 				</div>
 			</section>
 			<footer class="main__footer">
@@ -166,17 +164,18 @@
 							/>
 						</a>
 						<a href="https://github.com/rzonsol" target="blank">
-						<img
-							src="../assets/img/Github_Icon_footer.svg"
-							alt="Icon of GitHub"
-							class="main__footer__social__icon"
-						/>
+							<img
+								src="../assets/img/Github_Icon_footer.svg"
+								alt="Icon of GitHub"
+								class="main__footer__social__icon"
+							/>
+						</a>
 						<a href="https://www.instagram.com/piotrrzonsowski/" target="blank">
-						<img
-							src="../assets/img/Instagram_Icon.svg"
-							alt="Icon of Instagram"
-							class="main__footer__social__icon"
-						/>
+							<img
+								src="../assets/img/Instagram_Icon.svg"
+								alt="Icon of Instagram"
+								class="main__footer__social__icon"
+							/>
 						</a>
 					</section>
 					<a
