--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 		<!-- OPTIONAL description. 2-4 sentences. -->
 		<meta property="og:description" content="My developer portfolio" />
 		<!-- full url with http(s) ie. # -->
-		<meta property="og:url" content="https://rzonsol.github.io/" />
+		<meta property="og:url" content="https://rzonsol.github.io" />
 		<!-- full url to the image with http(s) ie. #png. Facebook suggests at least 1200 x 630. -->
-		<meta property="og:image" content="#" />
+		<meta
+			property="og:image"
+			content="https://rzonsol.github.io//assets/img/link-photo.jpg"
+		/>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 
