--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body>
-		<main>
+		<section role="main">
 			<section class="hero">
 				<img
 					src="../assets/img/9127775537.jpg"
@@ -188,7 +188,7 @@
 					>
 				</div>
 			</footer>
-		</main>
+		</section>
 		<script src="js/main.js"></script>
 	</body>
 </html>
